tests/ill_typed/if_stmt.mist
def foo(cond: Boolean): Int = if (cond) 1 else "2"

def run(): Int = {
  val x = if (true) 1 else "2"
  foo(x)
}